--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,10 @@
 #root {
   width: 100vw;
   height: 100vh;
-  background: radial-gradient(#5a47ce, #232323 80%);
+  background: radial-gradient(circle at center, #ffffff 0%, #bfaaff 40%, #6c4cff 100%);
 }
+
+
 
 body {
   margin: 0;
